--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -56,7 +56,7 @@
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#exam" aria-expanded="false" aria-controls="exam">Start exam</button>
             <br />
             <div id="exam" class="collapse">
-                    <form id="questionform" action="point to a submit view" method="post">
+                    <form id="questionform" action="/onlinecourse/{{course.id}}/submit/" method="post">
                         {% for question in course.question_set.all %}
                         <div class="card mt-1">
                             <div class="card-header"><h5>{{question.question_text}}</h5></div>
